--- a/index.html
+++ b/index.html
@@ -295,11 +295,11 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="nav-container">
-            <div class="logo">DEITY_TERHOR</div>
+            <div class="logo">Deity_Terror</div>
             <ul class="nav-links">
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#chess">Chess Ops</a></li>
-                <li><a href="#creator">Creator Bay</a></li>
+                <li><a href="#creator">Creator</a></li>
                 <li><a href="#code">Code Vault</a></li>
             </ul>
         </div>
@@ -309,7 +309,7 @@
     <section id="hero" class="hero">
         <div class="hero-content">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFpGcSlKlR3-qWzhbtuB2_woAGH-L2icTDtgMUWeQ59kRqiokG0G21tYd-&s=10" alt="Deity_Terror Profile" class="pfp">
-            <h1>BHAVESH<br><span style="font-weight: 400; font-size: 0.6em;">aka DEITY_TERHOR</span></h1>
+            <h1>BHAVESH<br><span style="font-weight: 400; font-size: 0.6em;">aka Deity_Terror</span></h1>
             <p class="hero-subtitle">INTJ 5w6 sp/sx (514) | Polymath Systems Architect</p>
             <div class="cta-buttons">
                 <a href="https://youtube.com/@deityzzz?si=miPx1BIgoZ0txR18" class="cta-btn" target="_blank">
